# stratum

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  TODO.md  config.docker.toml  config.example.toml  docker-compose.yml  skills-lock.json
.github/workflows/: rust.yml
.impeccable/: hook.cache.json
.impeccable/live/: config.json
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md
crates/stratum-agent/: AGENTS.md
crates/stratum-ontology/: AGENTS.md  Cargo.toml
crates/stratum-ontology-api/: AGENTS.md  Cargo.toml
crates/stratum-ontology-api/src/: error.rs  instance_routes.rs  lib.rs  schema_routes.rs
crates/stratum-ontology-api/tests/: router.rs
crates/stratum-ontology-mysql/: AGENTS.md  Cargo.toml  Makefile  docker-compose.test.yml
crates/wyse-agent-builtin/: AGENTS.md  Cargo.toml
crates/wyse-llm/: AGENTS.md  Cargo.toml
crates/wyse-llm/src/: definition.rs  error.rs  lib.rs  message.rs  mock.rs  structured_output.rs  tool_call.rs  usage.rs
crates/wyse-llm/src/protocol/: deepseek.rs  openai_compatible.rs
crates/wyse-llm/tests/: deepseek_provider.rs  openai_compatible_provider.rs
crates/wyse-ontology/: Cargo.toml
crates/wyse-ontology/src/: draft.rs  error.rs  id.rs  lib.rs  repository.rs  schema.rs  service.rs
docs/: PROTOCOL.md  agent-builtin-design.md  checkpoint-design.md  ontology-service-design.md
openspec/: config.yaml
stratum-web/: AGENTS.md
wyse-web/: .env.example  AGENTS.md  DESIGN.md  Dockerfile  README.md  package.json  pnpm-lock.yaml
(+180 files in other folders)
