[package]
name = "stratum-ontology-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
stratum-ontology.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tower.workspace = true
tracing-subscriber.workspace = true
stratum-filesystem.workspace = true
uuid.workspace = true

[lints]
workspace = true
